<resources xmlns:xliff="http://schemas.android.com/apk/res/android">
    <string name="app_name">Finobot - ITR eFiling</string>
    <string name="action_settings">Settings</string>
    <string name="email_login_desc">Log in to PurplePath</string>
    <string name="email_bus_login_desc">Create Your Business Account</string>
    <string name="email_hint">Email Id</string>
    <string name="email_pwd_hint">Password</string>
    <string name="email_login">Login</string>
    <string name="plan_your_finaces">Plan Your Finances</string>
    <string name="track_your_finaces">Track Your Finances</string>
    <string name="email_login_tittle">Log In</string>
    <string name="email_forget_pwd">Forgot password?</string>
    <string name="new_finobot">New to Finobot?</string>
    <string name="sign_with_facebook">Connect with Facebook</string>
    <string name="sign_with_google">Connect  with Google</string>
    <string name="playbutton">Play</string>
    <string name="Rs">\u20B9</string>
    <string name="next_button">Next</string>
    <string name="bullet_tic">\u2713</string>
    <string name="facebook_app_id">1212824275490329</string>
    <string name="fb_login_protocol_scheme">fb1212824275490329</string>
    <string name="create_an_account"> Create an account</string>
    <string name="email_signup_below">---- or sign up below ----</string>
    <string name="email_busines_signup_below">- or login below --</string>
    <string name="email_phone_number">Phone number</string>
    <string name="email_signup">Signup</string>
    <string name="calender">Calender</string>
    <string name="calender_text">Select date of birth </string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_yes">YES</string>
    <string name="dialog_continue">Continue</string>
    <string name="dialog_no">NO</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_done">Done</string>
    <string name="loading"> Loading\.\.\.</string>
    <string name="login_verification_code_desc">Please enter your 6 digit verification code</string>
    <string name="text_next_step">Next step</string>
    <string name="http_communication_failed_try_again">COMMUNICATION FAILED. TRY AGAIN&#8230;</string>
    <string name="http_login_invalid_username_or_pwd">Login Failure Invalid username or password</string>
    <string name="http_login_invalid_email">Invalid email address!</string>
    <string name="http_login_invalid_pwd">Please enter your password</string>
    <string name="enteroldpass">Please enter your old password</string>
    <string name="enternewpass">Please enter your new password</string>
    <string name="enterthree">Please enter more than three characters on password</string>
    <string name="enterconfornpass">Please enter your confirm password</string>
    <string name="newdoes">New password does not match confirm password</string>
    <string name="successful">Successfully Changed Password</string>
    <string name="error">Password does not updated</string>
    <string name="successfully">Feedback Successfully submitted</string>
    <string name="enteremail">Please enter your e-mail address</string>
    <string name="entercomments">Please enter your comments</string>
    <string name="goalconsr">Goal timeline details page under construction</string>
    <string name="filesuccessfully">File Successfully Uploaded</string>
    <string name="filesuccessfullydeleted">File Item Deleted</string>
    <string name="file_valid">Please Upload valid file</string>
    <string name="pls_upload">Please Upload Upto 10Mb</string>
    <string name="overinsured">Your are over insured</string>
    <string name="pleaseentervaliedold">Please enter valid old password</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="http_login_invalid_newpwd">Please enter your new password</string>
    <string name="http_login_invalid_phonenumber">Please enter valid phone number</string>
    <string name="get_mobile_number">Please enter your valid mobile number</string>
    <string name="forget_pwd_enter_email">Please enter Email Id</string>
    <string name="forget_pwd_email_val_msg">Please enter a valid email address</string>
    <string name="forget_pwd_auth_code">Please enter the authorization code</string>
    <string name="forget_pwd_not_match">The password you entered does not match. Please correct your password</string>
    <string name="login_verification_code">Please enter your verification code</string>
    <string name="login_verification_auth_code_wrong">Please enter valid authorization code</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="check_internet_settings">Please check Internet settings</string>
    <string name="forgot_pwd">Forgot Password</string>
    <string name="forgot_pwd_screen">Forgot password</string>
    <string name="forgot_pwd_desc">Enter your e-mail address to reset your password</string>
    <string name="forgot_pwd_send">Send</string>
    <string name="forgot_pwd_auth_desc">Enter your authorization code</string>
    <string name="forgot_pwd_choose_new_desc">Choose a New password</string>
    <string name="hint_forgot_pwd_auth_pwd">authorized password</string>
    <string name="hint_forgot_new_pwd">New password</string>
    <string name="hint_forgot_re_type_pwd">Confirm new password</string>
    <string name="text_forgot_save">Save</string>
    <string name="investment_detail">Investment Detail</string>
    <string name="investment_assert_type">Investment/Asset Type</string>
    <string name="investment_Yearly_Amt">Yearly Amt</string>
    <string name="investment_current_balanceAmt">Current Balance Amt</string>
    <string name="investment_lorem_lpus">Lorem Ipsum</string>
    <string name="investment_LoremIpsum">Lorem Ipsum</string>
    <string name="investment_prompt_spiner">Bank-fixed detail</string>
    <string name="submit">Submit</string>
    <string name="cancel">"Cancel"</string>
    <string name="guide_view_googel_accout">Google+</string>
    <string name="marquee_daily_scores">Gold Price in today 2670 in 22 carat....  Silver 1gm price today 167.</string>
    <string name="hello_blank_fragment">Page Under Construction</string>
    <string name="signup_emailid">Email Id</string>
    <string name="signup_setpassword">Set Password</string>
    <string name="signup_setconfirmpassword">Confirm Password</string>
    <string name="signup_fullname">Full Name</string>
    <string name="signup_mobileno">Mobile Number</string>
    <string name="signup_txt">Signup</string>
    <string name="signup_confirm_password_val_msg">Please check re-enter password</string>
    <string name="signup_enter_password_val_msg">Please enter password </string>
    <string name="signup_full_name_val_msg">Please enter your name</string>
    <string name="signup_old_pass">Please enter your old password</string>
    <string name="editprofile_confirm_password">Please enter your confirm password</string>
    <string name="signup_min_password_lenth_msg">Please enter more than three characters on password</string>
    <string name="terms_checkbox1">Please accept Terms and Conditions &amp; Privacy Policy</string>
    <string name="terms_checkbox">I accept Terms and Conditions &amp; Privacy Policy</string>
    <string name="i_agrey"><u>I agree to the terms and conditions</u></string>
    <string name="view_more"><u>View More</u></string>
    <string name="personal_details_bornyear">Which year were you born?</string>
    <string name="personal_details_gender">What\'s your gender?</string>
    <string name="personal_details_mobileno">Mobile Number</string>
    <string name="personal_details_qualification">What\'s your Qualification?</string>
    <string name="personal_details_other_qualification">Any other qualification?</string>
    <string name="personal_details_current_occupation">What\'s your Current Occupation?</string>
    <string name="personal_details_other_occupation">Other Occupation?</string>
    <string name="personal_details_current_organization">What\'s your Current Organization?</string>
    <string name="personal_details_current_designation">What\'s your Current Designation?</string>
    <string name="personal_details_maritalstatus">Marital Status?</string>
    <string name="personal_details_marriedsince">Married Since(in years)?</string>
    <string name="personal_details_marrieddate">Wedding Date</string>
    <string name="personal_details_address">Address (City, Pin Code, State)</string>
    <string name="personal_details_ownhouse">This your own house?</string>
    <string name="personal_details_life_expect_age">Life Expectancy Age?</string>
    <string name="personal_details_planned_retirement_age">Planned Retirement Age?</string>
    <string name="personal_details_home_address">Home Address</string>
    <string name="personal_details_work_address">Work Address</string>
    <string name="personal_details_residential_status">Residential Status</string>
    <string name="personal_details_citizenship_status">Citizenship Status</string>
    <string name="personal_details_government_sector">Are you working in Government Sector?</string>
    <string name="personal_details_year">Please enter your Born Year</string>
    <string name="personal_detail_gender">Please enter your gender</string>
    <string name="personal_detail_qualification">Please enter your Qualification</string>
    <string name="personal_detail_current_occupation">Please enter your Current Occupation</string>
    <string name="personal_detail_life_expect_age">Please enter your Life Expectancy Age</string>
    <string name="personal_detail_planned_retirement_age">Please enter your Planned Retirement Age</string>
    <string name="personal_details_stay_curr_residence">No of years of stay at current residence(in Years)?</string>
    <string name="personal_details_years_service_curr_organization">No of years of service with current organization(in Years)?</string>
    <string name="radio_no">No </string>
    <string name="radio_yes">Yes</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="name">Name*</string>
    <string name="gender">Gender</string>
    <string name="age">Age(Years)*</string>
    <string name="Relationship">Relationship*</string>
    <string name="marital_status">Marital Status</string>
    <string name="occupation">Occupation</string>
    <string name="education">Education</string>
    <string name="currentdesigination">Current Designation</string>
    <string name="currentorganization">Current Organization</string>
    <string name="noofyearsofservice">No.of Years of Service with Current Organization</string>
    <string name="family_prompt_name">Enter your full name</string>
    <string name="title_add_exp">Amount saved in EMI</string>
    <string name="hint_additional_expenses">Additional Expenses</string>
    <string name="hint_overall_savings">Overall Savings</string>
    <string name="hint_present_value">Present Value Savings</string>
    <string name="hint_real_savings">Real Savings</string>
    <string name="hint_recommendations">Recommendation</string>
    <string name="content_home_loan_switch">Home Loan Switch:</string>
    <string name="content_not_recommendation">Not Recommendation</string>
</resources>