<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_xlarge"
    android:orientation="vertical">
    <TextView
        android:id="@+id/emi_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_add_exp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/text_header_colour"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_expenses_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/EdtErrorTextAppearance">

        <EditText
            android:id="@+id/add_expenses_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_additional_expenses"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:imeOptions="actionNext"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/overall_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/EdtErrorTextAppearance">

        <EditText
            android:id="@+id/overall_expenses_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_overall_savings"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:imeOptions="actionNext"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/present_value_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/EdtErrorTextAppearance">

        <EditText
            android:id="@+id/present_value_expenses_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_present_value"
            android:imeOptions="actionNext"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/real_saving_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/EdtErrorTextAppearance">

        <EditText
            android:id="@+id/real_saving_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_real_savings"
            android:imeOptions="actionNext"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recommendation_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/EdtErrorTextAppearance">

        <EditText
            android:id="@+id/recommendation_saving_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_recommendations"
            android:imeOptions="actionDone"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/home_loan_switch_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_home_loan_switch"
        android:layout_gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    <TextView
        android:id="@+id/not_recommendation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_not_recommendation"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_medium"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
</LinearLayout>