<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/emailloginrelativelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollview_forgotPwd"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/WhiteSmoke">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/signup_toplinearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_xxlarge"
                android:layout_marginLeft="@dimen/margin_xlarge"
                android:layout_marginRight="@dimen/margin_xlarge"
                android:layout_marginTop="@dimen/margin_xxlarge"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hidden"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/margin_xlarge"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:text="@string/forgot_pwd"
                    />

                <com.purplepath.purplepath.customview.CustomTextView
                    android:id="@+id/forgotPwdTitleId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/hidden"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/margin_xlarge"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:text="@string/forgot_pwd_screen"
                    android:visibility="gone"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <com.purplepath.purplepath.customview.CustomTextView
                    android:id="@+id/forgotPwdDescId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/forgotPwdTitleId"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/margin_xlarge"
                    android:gravity="center"
                    android:text="@string/forgot_pwd_desc"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_forgotPwdEmailId"
                    style="@style/StyledTilPaddedEditTextLayout"
                    android:layout_margin="@dimen/margin_xlarge"
                    android:layout_width="match_parent"
                    android:layout_below="@+id/forgotPwdDescId"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/StyledTilEditTextLabel">


                    <EditText
                        android:id="@+id/forgotPwdEmailId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_horizontal"
                        android:drawableLeft="@drawable/ic_email_icon"
                        android:drawablePadding="@dimen/margin_small"
                        android:layout_margin="@dimen/margin_small"
                        android:gravity="start|center_vertical"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/dark_gray_text_colour"  />
                </android.support.design.widget.TextInputLayout>


                <TextView
                    android:id="@+id/loginSignUpBelowId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/loginForgetPwdID"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="@dimen/margin_medium"
                    android:text="@string/email_signup_below"
                    android:textColor="@color/DarkGray"
                    android:visibility="invisible" />
            </LinearLayout>

            <TextView
                android:id="@+id/loginForgetPwdID"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signup_toplinearlayout"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/margin_medium"
                android:text="@string/email_forget_pwd"
                android:textColor="@color/DarkBlue" />
        </RelativeLayout>

    </ScrollView>
    <RelativeLayout
        android:id="@+id/buttonlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/scrollview_forgotPwd"
        android:background="@color/colorAccent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/margin_right"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_gravity="center">

        <Button
            android:id="@+id/forgotPwdSendBtnId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:text="@string/forgot_pwd_send"/>
    </RelativeLayout>


</RelativeLayout>